<resources>
    <string name="app_name">test-parkee</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="movie">Movie</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="top_rated_movie">Top Rated</string>
    <string name="now_playing_movie">Now Playing</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="no_favorite_movie">No Favorite Movie</string>
</resources>